# ChangeLog for media-sound/darksnow
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/darksnow/ChangeLog,v 1.14 2008/12/19 18:33:52 aballier Exp $

  19 Dec 2008; Alexis Ballier <aballier@gentoo.org>
  +files/darksnow-0.6.1-ldflags.patch, darksnow-0.6.1.ebuild:
  honour ldflags and fix asneeded build, bug #247832

  31 Jul 2007; Dimitry Bradt <diox@gentoo.org> darksnow-0.6.1.ebuild:
  x86 stable wrt #186889

  30 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> darksnow-0.6.1.ebuild:
  Stable on sparc wrt #186889

  28 Jul 2007; Steve Dibb <beandog@gentoo.org> darksnow-0.6.1.ebuild:
  amd64 stable, bug 186889

  28 Jul 2007; Samuli Suominen <drac@gentoo.org>
  +files/darksnow-0.6.1-Makefile.patch, darksnow-0.6.1.ebuild:
  Patch Makefile to respect DESTDIR, fixing also bug 152022. Thanks to Lars
  for reporting.

*darksnow-0.6.1 (08 Oct 2006)

  08 Oct 2006; MATSUU Takuto <matsuu@gentoo.org> +darksnow-0.6.1.ebuild:
  Version bumped, bug 126954.

  25 Jul 2005; David Holm <dholm@gentoo.org> darksnow-0.5.ebuild:
  Added to ~ppc.

  19 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove retired developer from metadata.xml.

*darksnow-0.5 (18 Apr 2005)

  18 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> +darksnow-0.5.ebuild:
  new upstream version, fixes #65596

  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  darksnow-0.4.4.ebuild:
  Stable amd64, sparc, x86.

  22 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  darksnow-0.4.4.ebuild:
  Added to ~amd64 and ~sparc.

  19 Oct 2004; Chris White <chriswhite@gentoo.org> darksnow-0.4.4.ebuild:
  One more QA issue for the road.

  19 Oct 2004; Chris White <chriswhite@gentoo.org> darksnow-0.4.4.ebuild:
  Fixed some QA issues.

*darksnow-0.4.4 (19 Oct 2004)

  19 Oct 2004; Chris White <chriswhite@gentoo.org> +metadata.xml,
  +darksnow-0.4.4.ebuild: