@@ -4,13 +4,17 @@ Hash: SHA1
 AUX darksnow-0.6.1-Makefile.patch 1977 RMD160 851926d9e478796b01eb126ca84366145e4e4849 SHA1 7674630788e2eee035f3c94a99ad9cba25a3c94d SHA256 760d4d2a188e07d09654057869a7132e45ae4f4dd2996c67d705222e160ca94b
 AUX darksnow-0.6.1-ldflags.patch 703 RMD160 78718f951002265a1e5f629235313ceffc90eb84 SHA1 7749b343de5cf678ad018eb982dd5091e358fea9 SHA256 60f7dea2791c878d0205cba065679df45b9a19807a59e384bacbe7c3d48b37cb
 DIST darksnow-0.6.1.tar.gz 61603 RMD160 95de5706b99d16cdd8e36484de6acc985b581bf4 SHA1 27d0e856ba9c1e599a9ed87ea5d3533e404e43fd SHA256 4b206546738700bf155219f528793bb5c45d221d9b8aa0ab1177b42dea5634ff
-EBUILD darksnow-0.6.1.ebuild 977 RMD160 3ebac62b79b28232ca6e3bbcaa1ecbcc980c416e SHA1 e503d8883757cc680646dc7f6ab92321278af09d SHA256 86a682214f01557bcb73cfe868436ed3d1b1be09fd128b98bd17b342c5eb93ed
-MISC ChangeLog 2044 RMD160 8c6be0ca19cc891230c12377f8a44dd1a2746088 SHA1 ab64362357a8ab5b2d23f0aeb8da47a827422159 SHA256 d5e2dcb22080700767b961a6da58522c898a685e2764ce1e697538310fef130f
+EBUILD darksnow-0.6.1.ebuild 961 RMD160 027968b9d3665fe63ed20a593b987aa90f59f8cb SHA1 cc83ecf10b50af2e43c50c81421d3ce23d8519f4 SHA256 fc8f6506bf71edbfe19dda587a5d263d27173780dd486876b6f3c3ce79f1bfdc
+MISC ChangeLog 2164 RMD160 07b96f647e6cbda60350dd9caa3d7ab09227e7bf SHA1 4b849022d717e1cb6ba2c5d395a84b1fff46604e SHA256 b739d6ace7122f4ecb038dc7ad4515d4f38dcd49d34e3370d4525c20c8f6e877
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAklL6RYACgkQvFcC4BYPU0omXgCfeT0No0rJk5oMTzVkOAGFMqQs
-lDIAnjo+pvI3YFmhJ6v96Oa8vHIzVIph
-=hxcU
+iQEcBAEBAgAGBQJNezMoAAoJEEqz6FtPBkyjTvQH/jOXLOgOhK1/q38n2O5tEn4c
+cIKyD35cNipVCEZEWa00LbNLbbw4R1Rqm2NjVh+/v+xRkhI8khHpudxPA8G/VKep
+wwk2wS4t5SyelxxTSwqbcExWdNoaipSxoyU4f32+fPoDe4/JuNI45cZCrkgg7QhL
+dcl6gG8aaus5W9UEY0WM5AztT9XNj6KPZLdz2l9QmDQxi835L4ej0nxYbgSSv7EA
+ScRf2zGbL9KAv/C1jv39sA1vk3CHAVYaFXDK7DtyoC789siXerXqWtJujpgBCoh4
+2APiJCzDq3NPm7rhGGhxxXI3Z+3a0Dm7WwPi8xqISscGw0fRUwXc3YK5gmDjWE8=
+=9lQI
 -----END PGP SIGNATURE-----
